[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[project]
authors = [
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "todecoratorfactory"
keywords = []
name = "todecoratorfactory"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.0.0.dev0+local"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/todecoratorfactory/#files"
Index = "https://pypi.org/project/todecoratorfactory/"
Source = "https://github.com/johannes-programming/todecoratorfactory/"
Website = "https://todecoratorfactory.johannes-programming.online/"
